refactor(mcp)!: replace dev_explore with dev_inspect tool
- Renamed dev_explore to dev_inspect for clarity
- Changed actions to specific verbs: compare, validate
- Removed redundant pattern and relationships actions
- Updated all documentation and tests
- Added comprehensive migration guide

BREAKING CHANGE: dev_explore tool has been replaced with dev_inspect.
Use action 'compare' instead of 'similar', and 'validate' for pattern checks.
The 'pattern' action is replaced by dev_search, and 'relationships' by dev_refs.

--- a/website/content/docs/configuration.mdx
+++ b/website/content/docs/configuration.mdx
@@ -67,7 +67,7 @@ Control which MCP tools are enabled:
 | `search` | enabled | `dev_search` | Semantic code search |
 | `github` | enabled | `dev_gh` | GitHub issues/PRs search |
 | `plan` | enabled | `dev_plan` | Context assembly for issues |
-| `explore` | enabled | `dev_explore` | Code exploration |
+| `inspect` | enabled | `dev_inspect` | File analysis |
 | `status` | disabled | `dev_status` | Repository status |
 | `refs` | enabled | `dev_refs` | Relationship queries |
 | `map` | enabled | `dev_map` | Codebase overview |
