--- a/website/content/docs/quickstart.mdx
+++ b/website/content/docs/quickstart.mdx
@@ -61,7 +61,7 @@ Try these prompts:
 > "Use dev_plan to create an implementation plan for issue #42"
 
 **Find similar code:**
-> "Use dev_explore to find code similar to src/utils/cache.ts"
+> "Use dev_inspect to compare src/utils/cache.ts with similar implementations"
 
 **Search GitHub issues:**
 > "Use dev_gh to search for issues about performance"
