--- a/website/content/docs/tools/index.mdx
+++ b/website/content/docs/tools/index.mdx
@@ -11,7 +11,7 @@ dev-agent provides nine tools through the Model Context Protocol (MCP). These to
 | [`dev_map`](/docs/tools/dev-map) | Codebase structure overview with change frequency |
 | [`dev_history`](/docs/tools/dev-history) | Semantic search over git commits ✨ v0.4 |
 | [`dev_plan`](/docs/tools/dev-plan) | Assemble context for GitHub issues |
-| [`dev_explore`](/docs/tools/dev-explore) | Explore code patterns and relationships |
+| [`dev_inspect`](/docs/tools/dev-inspect) | Inspect files (compare implementations, check patterns) |
 | [`dev_gh`](/docs/tools/dev-gh) | Search GitHub issues and PRs |
 | [`dev_status`](/docs/tools/dev-status) | Check repository indexing status |
 | [`dev_health`](/docs/tools/dev-health) | Monitor MCP server health |
@@ -49,7 +49,7 @@ AI Assistant (Cursor/Claude)
         ├── MapAdapter         → dev_map
         ├── HistoryAdapter     → dev_history  ✨ v0.4
         ├── PlanAdapter        → dev_plan
-        ├── ExploreAdapter     → dev_explore
+        ├── InspectAdapter     → dev_inspect
         ├── GitHubAdapter      → dev_gh
         ├── StatusAdapter      → dev_status
         └── HealthAdapter      → dev_health
