--- a/website/content/index.mdx
+++ b/website/content/index.mdx
@@ -182,7 +182,7 @@ dev mcp install           # For Claude Code
 | [`dev_refs`](/docs/tools/dev-refs) | Find callers/callees of any function |
 | [`dev_map`](/docs/tools/dev-map) | Codebase structure with change frequency |
 | [`dev_history`](/docs/tools/dev-history) | Semantic search over git commits |
-| [`dev_explore`](/docs/tools/dev-explore) | Find similar code, trace relationships |
+| [`dev_inspect`](/docs/tools/dev-inspect) | Inspect files (compare implementations, check patterns) |
 | [`dev_gh`](/docs/tools/dev-gh) | Search GitHub issues/PRs semantically |
 | [`dev_status`](/docs/tools/dev-status) | Repository indexing status |
 | [`dev_health`](/docs/tools/dev-health) | Server health checks |
