--- a/website/content/updates/index.mdx
+++ b/website/content/updates/index.mdx
@@ -32,7 +32,7 @@ Dev-agent's **unique value** is semantic understanding:
 
 - ✅ **Semantic code search** (`dev_search`) — Find code by meaning, not keywords
 - ✅ **Semantic commit search** (`dev_history`) — Search git history by concept
-- ✅ **Code structure analysis** (`dev_map`, `dev_explore`) — AST + embeddings
+- ✅ **Code structure analysis** (`dev_map`, `dev_inspect`) — AST + embeddings
 - ✅ **GitHub context** (`dev_plan`, `dev_gh`) — Cross-reference issues with code
 
 Git analytics (ownership, activity) are better served by existing tools:
@@ -47,7 +47,7 @@ Git analytics (ownership, activity) are better served by existing tools:
 - `dev_history` — Semantic commit search
 - `dev_map` — Codebase structure with change frequency
 - `dev_plan` — GitHub issue context assembly
-- `dev_explore` — Code similarity and relationships
+- `dev_inspect` — File analysis (similarity + pattern checking)
 - `dev_gh` — GitHub semantic search
 
 **Supporting infrastructure:**
