--- a/website/content/docs/tools/dev-refs.mdx
+++ b/website/content/docs/tools/dev-refs.mdx
@@ -122,5 +122,5 @@ Find everything that calls the old validateUser function
 
 - [`dev_search`](/docs/tools/dev-search) — Find symbols first
 - [`dev_map`](/docs/tools/dev-map) — See hot paths (most referenced files)
-- [`dev_explore`](/docs/tools/dev-explore) — Find similar patterns
+- [`dev_inspect`](/docs/tools/dev-inspect) — Find similar implementations
 
